	r5
- Fixed bug in RelativePosition PriceStat
- Fixed bug in PercentileTrim PriceSampler	

	r4
- Started using LibScheduler	

	Release 0.4.4
- First version